# detectron2

./: SETUP.md  pyproject.toml
demo/: demo.py
detectron2/config/: setup.py
