[tool.poetry]
name = "detectron2"
version = "0.1.0"
description = ""
authors = ["Jeffrey <jeffrey.dot.li@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
torch = "^2.2.1"
torchvision = "^0.17.1"
Pillow = ">=7.1"    # Prefer Pillow over PIL (not a strict requirement)
matplotlib = "*" 
pycocotools = ">=2.0.2" 
termcolor = ">=1.1"
yacs = ">=0.1.8"
tabulate = "*"
cloudpickle = "*"
tqdm = ">4.29.0" 
tensorboard = "*"
fvcore = ">=0.1.5,<0.1.6" 
iopath = ">=0.1.7,<0.1.10"
omegaconf = ">=2.1,<2.4"
hydra-core = ">=1.1"
black = "*"
packaging = "*"
dataclasses = "*"

# If you can extract a basic list of optional dependencies:
[tool.poetry.extras]
all = ["fairscale", "timm", "scipy", "shapely", "pygments", "psutil", "panopticapi"] 
dev = ["flake8", "isort", "flake8-bugbear", "flake8-comprehensions", "black"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

